@@ -76,6 +76,7 @@ release 0.14.6
 	* added missing functions to python binding related to torrent creation
 	* fixed to add filename on web seed urls that lack it
 	* fixed BOOST_ASIO_HASH_MAP_BUCKETS define for boost 1.39
+	* fixed checking of fast and suggest messages when used with magnet links
 
 release 0.14.5
 
